--- a/style.css
+++ b/style.css
@@ -75,13 +75,13 @@ input
 .clicked{
     position: absolute;
     top:0;
-    left: 25%;
+    width: 100%;
     background-image: none;
     color: green;
     font-size: 2.5vmin;
     border-radius: 0;
-    width: auto;
-    height: 2em;
+   
+    height: 3em;
 }
 .displayConteneur
 {
